feat: Add featuregate to resourceTypes (#1584)
* Add featuregate to resourceTypes

* PR Feedback

* Fix swagger
