# docs/swagger/swagger.json
@@ -2711,6 +2711,10 @@
         "model.ResourceTypeSpec": {
             "type": "object",
             "properties": {
+                "featureGate": {
+                    "description": "FeatureGate is a string that is used to gate the availability of this resource type.",
+                    "type": "string"
+                },
                 "logs": {
                     "description": "individual",
                     "allOf": [
